Adjust interaction area styling and add zooming

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -98,6 +98,14 @@ body {
   text-align: center;
 }
 
+#interaction {
+  border-left: 5px solid #ecf0f1;
+}
+
+#presentation {
+  overflow: hidden;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
