--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,14 +5,12 @@
   <% include ../partials/head %>
 </head>
 <body>
-  <div class="row">
-    <div class="col-md-9">
-      <div class="box">
-        <canvas id="the-canvas"></canvas>
-      </div>
+  <div id="content" class="row">
+    <div id="presentation" class="col-md-9">
+      <canvas id="the-canvas"></canvas>
     </div>
-    <div class="col-md-3">
-      <div class="box">Interaction</div>
+    <div id="interaction" class="col-md-3">
+
     </div>
   </div>
   <script src="js/index.js"></script>
