--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -7,6 +7,8 @@
 <body>
   <button onclick="nextPage()">Next</button>
   <button onclick="prevPage()">Prev</button>
+  <button onclick="upScale()">Zoom In</button>
+  <button onclick="downScale()">Zoom Out</button>
   <script src="js/instructor.js"></script>
 </body>
 </html>
