--- a/views/pages/attendee.ejs
+++ b/views/pages/attendee.ejs
@@ -5,7 +5,14 @@
   <% include ../partials/head %>
 </head>
 <body>
-  <h1>Attendee Page</h1>
+  <textarea class="attendee-textfield" id="question" type="text" placeholder="Add your comments here..."></textarea>
+  <div id="attendee-button-container">
+    <div class="attendee-button" onclick="sendMultipleChoiceResponse('A')">A</div>
+    <div class="attendee-button" onclick="sendMultipleChoiceResponse('B')">B</div>
+    <div class="attendee-button" onclick="sendMultipleChoiceResponse('C')">C</div>
+    <div class="attendee-button" onclick="sendMultipleChoiceResponse('D')">D</div>
+  </div>
+  <div id="attendee-submission"></div>
   <script src="js/attendee.js"></script>
 </body>
 </html>
