--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,7 +10,9 @@
       <canvas id="the-canvas"></canvas>
     </div>
     <div id="interaction" class="col-md-3">
+      <div id="public-comments">
 
+      </div>
     </div>
   </div>
   <script src="js/index.js"></script>
