Add clear comments button

--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -16,9 +16,7 @@
   <div id="unapproved-comments">
 
   </div>
-  <div id="approved-comments">
-
-  </div>
+  <div class="instructor-button" onclick="clearComments()">Clear All Comments</div>
   <script src="js/instructor.js"></script>
 </body>
 </html>
