--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -135,6 +135,12 @@ body {
 
 .unapproved-comment {
   cursor: pointer;
+  color: white;
+  font-size: 1.5em;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 5px;
+  background-color: #3498db;
 }
 
 /* ==========================================================================
