--- a/views/pages/attendee.ejs
+++ b/views/pages/attendee.ejs
@@ -5,6 +5,7 @@
   <% include ../partials/head %>
 </head>
 <body>
+  <input id="attendee-name" placeholder="Enter your name">
   <textarea class="attendee-textfield" id="attendee-comment" type="text" placeholder="Add your comments here..."></textarea>
   <div class="comment-submit-button" onclick="submitComment()">
     Submit Comment
