--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,7 +1,7 @@
 <!-- views/partials/head.ejs -->
 <meta charset="utf-8">
-<title>Syntactique Live</title>
-<meta name="description" content="Seed project for NodeJS, Socket.io, jQuery, Express">
+<title>Interactive Presentation Demo</title>
+<meta name="description" content="Built off seed project for NodeJS, Socket.io, jQuery, Express">
 <meta name="author" content="Nafeu Nasir">
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
 <link rel="stylesheet" href="css/styles.css">
