--- a/views/pages/attendee.ejs
+++ b/views/pages/attendee.ejs
@@ -10,12 +10,12 @@
   <div class="comment-submit-button" onclick="submitComment()">
     Submit Comment
   </div>
-  <div id="attendee-button-container">
+<!--   <div id="attendee-button-container">
     <div class="attendee-button" onclick="sendMultipleChoiceResponse('A')">A</div>
     <div class="attendee-button" onclick="sendMultipleChoiceResponse('B')">B</div>
     <div class="attendee-button" onclick="sendMultipleChoiceResponse('C')">C</div>
     <div class="attendee-button" onclick="sendMultipleChoiceResponse('D')">D</div>
-  </div>
+  </div> -->
   <div id="attendee-submission"></div>
   <script src="js/attendee.js"></script>
 </body>
