--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -10,13 +10,15 @@
   <div class="instructor-button" onclick="prevPage()">Prev</div>
   <div class="instructor-button" onclick="upScale()">Zoom In</div>
   <div class="instructor-button" onclick="downScale()">Zoom Out</div>
+  <div class="instructor-button" onclick="scrollUp()">Scroll Up</div>
+  <div class="instructor-button" onclick="scrollDown()">Scroll Down</div>
   <div id="command-log"></div>
   <hr>
+  <div class="instructor-button" onclick="clearComments()">Clear All Comments</div>
   <h2>Comments</h2>
   <div id="unapproved-comments">
 
   </div>
-  <div class="instructor-button" onclick="clearComments()">Clear All Comments</div>
   <script src="js/instructor.js"></script>
 </body>
 </html>
