Reduce app into a barebones template state

--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -4,21 +4,10 @@
 <head>
   <% include ../partials/head %>
 </head>
-<body>
-  <h2>Slide Control</h2>
-  <div class="instructor-button" onclick="nextPage()">Next</div>
-  <div class="instructor-button" onclick="prevPage()">Prev</div>
-  <div class="instructor-button" onclick="upScale()">Zoom In</div>
-  <div class="instructor-button" onclick="downScale()">Zoom Out</div>
-  <div class="instructor-button" onclick="scrollUp()">Scroll Up</div>
-  <div class="instructor-button" onclick="scrollDown()">Scroll Down</div>
-  <div id="command-log"></div>
-  <hr>
-  <div class="instructor-button" onclick="clearComments()">Clear All Comments</div>
-  <h2>Comments</h2>
-  <div id="unapproved-comments">
+<style type="text/css">
 
-  </div>
+</style>
+<body>
   <script src="js/instructor.js"></script>
 </body>
 </html>
