--- a/views/pages/viewer.ejs
+++ b/views/pages/viewer.ejs
@@ -1,9 +1,12 @@
-<!-- views/pages/index.ejs -->
+<!-- views/pages/viewer.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <% include ../partials/head %>
 </head>
+<style type="text/css">
+
+</style>
 <body>
   <div id="content" class="row">
     <div id="presentation" class="col-md-9">
@@ -13,6 +16,6 @@
 
     </div>
   </div>
-  <script src="js/index.js"></script>
+  <script src="js/viewer.js"></script>
 </body>
 </html>
