--- a/views/pages/attendee.ejs
+++ b/views/pages/attendee.ejs
@@ -4,19 +4,10 @@
 <head>
   <% include ../partials/head %>
 </head>
+<style type="text/css">
+
+</style>
 <body>
-  <input id="attendee-name" placeholder="Enter your name">
-  <textarea class="attendee-textfield" id="attendee-comment" type="text" placeholder="Add your comments here..."></textarea>
-  <div class="comment-submit-button" onclick="submitComment()">
-    Submit Comment
-  </div>
-<!--   <div id="attendee-button-container">
-    <div class="attendee-button" onclick="sendMultipleChoiceResponse('A')">A</div>
-    <div class="attendee-button" onclick="sendMultipleChoiceResponse('B')">B</div>
-    <div class="attendee-button" onclick="sendMultipleChoiceResponse('C')">C</div>
-    <div class="attendee-button" onclick="sendMultipleChoiceResponse('D')">D</div>
-  </div> -->
-  <div id="attendee-submission"></div>
   <script src="js/attendee.js"></script>
 </body>
 </html>
