--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,3 +9,4 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.0.288/pdf.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="js/helpers.js"></script>
