Add new instructor buttons

--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -8,6 +8,21 @@
 
 </style>
 <body>
+  <div class="row">
+    <div id="instructor-actions" class="col-md-4">
+      <div class="box">
+        <div class="instructor-button col-md-12" onclick="emitNextPage()">Next Page</div>
+        <div class="instructor-button col-md-12" onclick="emitPreviousPage()">Previous Page</div>
+        <div class="instructor-button col-md-12" onclick="emitZoomIn()">Zoom In</div>
+        <div class="instructor-button col-md-12" onclick="emitZoomOut()">Zoom Out</div>
+      </div>
+    </div>
+    <div id="instructor-dynamics" class="col-md-8">
+      <div class="box">
+
+      </div>
+    </div>
+  </div>
   <script src="js/instructor.js"></script>
 </body>
 </html>
