Minor styling fixes to viewer

--- a/views/pages/viewer.ejs
+++ b/views/pages/viewer.ejs
@@ -5,14 +5,20 @@
   <% include ../partials/head %>
 </head>
 <style type="text/css">
+  #presentation {
+    overflow: hidden;
+  }
 
+  #interaction {
+    background-color: #222f3e;
+  }
 </style>
 <body>
   <div id="content" class="row">
-    <div id="presentation" class="col-md-9">
+    <div id="presentation" class="col-md-9 col-xs-12">
       <canvas id="the-canvas"></canvas>
     </div>
-    <div id="interaction" class="col-md-3">
+    <div id="interaction" class="col-md-3 col-xs-12">
 
     </div>
   </div>
