--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -5,20 +5,33 @@
   <% include ../partials/head %>
 </head>
 <style type="text/css">
-
+  .instructor-button {
+    width: 100%;
+  }
+  body {
+    padding: 0px 20px 0px 20px;
+  }
 </style>
 <body>
   <div class="row">
-    <div id="instructor-actions" class="col-md-4">
-      <div class="box">
-        <div class="instructor-button col-md-12" onclick="emitNextPage()">Next Page</div>
-        <div class="instructor-button col-md-12" onclick="emitPreviousPage()">Previous Page</div>
-        <div class="instructor-button col-md-12" onclick="emitZoomIn()">Zoom In</div>
-        <div class="instructor-button col-md-12" onclick="emitZoomOut()">Zoom Out</div>
+    <div class="col-md-4 col-xs-12">
+      <h4>Unapproved Questions:</h4>
+      <div id="instructor-actions">
+        <div class="instructor-button" onclick="emitNextPage()">Next Page</div>
+        <div class="instructor-button" onclick="emitPreviousPage()">Previous Page</div>
+        <div class="instructor-button" onclick="emitZoomIn()">Zoom In</div>
+        <div class="instructor-button" onclick="emitZoomOut()">Zoom Out</div>
       </div>
     </div>
-    <div id="instructor-dynamics" class="col-md-8">
-      <div class="box">
+    <div class="col-md-4 col-xs-12">
+      <h4>Unapproved Questions:</h4>
+      <div id="unapproved-questions">
+
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-12">
+      <h4>Approved Questions:</h4>
+      <div id="approved-questions">
 
       </div>
     </div>
