--- a/views/pages/attendee.ejs
+++ b/views/pages/attendee.ejs
@@ -18,24 +18,27 @@
     opacity: 0.5;
   }
 
+  .display-question {
+    padding: 10px;
+    font-size: 1.25em;
+    border: 1px solid black;
+    margin: 10px;
+  }
+
+  .vote-btn {
+    cursor: pointer;
+  }
+
 </style>
 <body>
   <div class="row">
-    <div id="attendee-submissions" class="col-md-8">
-      <div class="box">
-        <div class="col-md-12">
-          <input id="name-field" class="col-md-12" placeholder="Enter your name (or leave blank to remain anonymous)"></input>
-        </div>
-        <div class="col-md-12">
-          <textarea id="question-field" class="col-md-12" placeholder="Enter your questions"></textarea>
-        </div>
-        <div id="question-submit" class="button col-md-12" onclick="submitQuestion()">Submit</div>
-      </div>
+    <div id="attendee-submissions" class="col-md-8 col-xs-12">
+      <input id="name-field" class="col-md-12" placeholder="Enter your name (or leave blank to remain anonymous)"></input>
+      <textarea id="question-field" class="col-md-12" placeholder="Enter your questions"></textarea>
+      <div id="question-submit" class="button col-md-12" onclick="submitQuestion()">Submit</div>
     </div>
-    <div id="attendee-insight" class="col-md-4">
-      <div class="box">
+    <div id="user-voting" class="col-md-4 col-xs-12">
 
-      </div>
     </div>
   </div>
   <script src="js/attendee.js"></script>
