--- a/views/pages/viewer.ejs
+++ b/views/pages/viewer.ejs
@@ -12,6 +12,15 @@
   #interaction {
     background-color: #222f3e;
   }
+
+  .display-question {
+    padding: 10px;
+    font-size: 1.5em;
+    color: white;
+    border: 1px solid white;
+    margin: 10px;
+  }
+
 </style>
 <body>
   <div id="content" class="row">
