--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -70,7 +70,7 @@
 </style>
 <body>
   <div class="row">
-    <div id="section-a" class="col-md-4 col-xs-12">
+    <div id="section-a" class="col-md-3 col-xs-12">
       <h4>Viewer Control</h4>
       <div id="instructor-actions">
         <div class="action-btn" onclick="emitNextPage()">Next Page</div>
@@ -79,7 +79,7 @@
         <div class="action-btn" onclick="emitZoomOut()">Zoom Out</div>
       </div>
     </div>
-    <div id="section-b" class="col-md-4 col-xs-12">
+    <div id="section-b" class="col-md-4 col-md-offset-1 col-xs-12">
       <h4>Approvals</h4>
       <div id="unapproved-questions">
 
