--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,6 +4,7 @@
 <meta name="description" content="Built off seed project for NodeJS, Socket.io, jQuery, Express">
 <meta name="author" content="Nafeu Nasir">
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/styles.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet">
 <script src="/socket.io/socket.io.js"></script>
