--- a/views/pages/attendee.ejs
+++ b/views/pages/attendee.ejs
@@ -12,6 +12,19 @@
     color: white;
   }
 
+  ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+      color: white;
+      opacity: 0.5; /* Firefox */
+  }
+
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+      color: white;
+  }
+
+  ::-ms-input-placeholder { /* Microsoft Edge */
+      color: white;
+  }
+
   .button {
     cursor: pointer;
   }
@@ -20,40 +33,80 @@
     opacity: 0.5;
   }
 
-  .display-question {
-    padding: 10px;
-    font-size: 1.25em;
-    border: 1px solid black;
-    margin: 10px;
-  }
-
   .vote-btn {
     cursor: pointer;
   }
 
-  #question-field, #input-field {
+  #question-field, #name-field {
     width: 100%;
-    padding: 20px;
-    font-size: 1.25em;
-    margin: 10px;
-    border: 1px solid white;
-    border-radius: 5px;
+    padding: 10px;
+    margin: 5px;
+    font-size: 1.2em;
+    border: none;
+    border-bottom: 1px solid white;
+    background-color: #341f97;
+    color: white;
+    font-weight: 100;
   }
 
   #question-submit {
     text-align: center;
   }
 
+  textarea {
+    resize: none;
+  }
+
+  .section-a {
+    padding: 20px;
+    background-color: #5f27cd;
+    border-bottom: 50px solid #341f97;
+  }
+
+  .section-b {
+    padding: 20px;
+    background-color: #54a0ff;
+    border-bottom: 50px solid #2e86de;
+  }
+
+  .section-a, .section-b {
+    margin-bottom: 20px;
+  }
+
+  .display-question {
+    padding: 10px;
+    font-size: 1em;
+    margin: 10px;
+    background-color: #2e86de;
+    border-radius: 5px;
+    font-weight: 100;
+  }
+
+  .vote-btn {
+    float: left;
+    padding-right: 5px;
+  }
+
 </style>
 <body>
   <div class="row">
-    <div id="attendee-submissions" class="col-md-8 col-xs-12">
-      <input id="name-field" placeholder="Enter your name (or leave blank to remain anonymous)"></input>
-      <textarea id="question-field" placeholder="Enter your questions"></textarea>
-      <div id="question-submit" class="button col-md-12" onclick="submitQuestion()">Submit</div>
+    <div id="attendee-submissions" class="col-md-7 col-xs-12 section-a">
+      <h4>Submit Comments and Questions</h4>
+      <div class="row">
+        <input id="name-field" placeholder="Enter your name (or leave blank to remain anonymous)"></input>
+      </div>
+      <div class="row">
+        <textarea id="question-field" rows="5" placeholder="Enter your questions"></textarea>
+      </div>
+      <div class="row">
+        <div id="question-submit" onclick="submitQuestion()">Submit</div>
+      </div>
     </div>
-    <div id="user-voting" class="col-md-4 col-xs-12">
+    <div id="attendee-voting" class="col-md-4 col-md-offset-1 col-xs-12 section-b">
+      <h4>Questions</h4>
+      <div id="user-voting">
 
+      </div>
     </div>
   </div>
   <script src="js/attendee.js"></script>
