--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -15,13 +15,6 @@
     color: white;
   }
 
-  h4 {
-    margin-top: 0;
-    color: white;
-    font-weight: 100;
-    font-size: 1.25em;
-  }
-
   .unapproved-question, .approved-question {
     padding: 20px;
     border: 1px solid black;
@@ -33,6 +26,7 @@
 
   #section-a, #section-b, #section-c {
     padding: 30px;
+    margin-bottom: 20px;
   }
 
   #section-a {
@@ -46,8 +40,8 @@
   }
 
   #section-c {
-    background-color: #00d2d3;
-    border-bottom: 50px solid #01a3a4;
+    background-color: #1dd1a1;
+    border-bottom: 50px solid #10ac84;
   }
 
   .action-btn {
@@ -65,6 +59,47 @@
   .action-btn:active {
     color: #5f27cd;
     background-color: white;
+  }
+
+  .approved-question, .unapproved-question {
+    padding: 10px;
+    font-size: 1.25em;
+    margin: 10px;
+    border-radius: 5px;
+    font-weight: 100;
+    border: none;
+  }
+
+  .approved-question {
+    background-color: #10ac84;
+  }
+
+  .unapproved-question {
+    background-color: #2e86de;
+  }
+
+  .question-actions {
+    font-size: 1.4em;
+  }
+
+  .approve-btn, .reject-btn, .remove-btn {
+    display: inline-block;
+    margin: 5px 10px 5px 0px;
+    padding: 0px 5px 0px 5px;
+    border: 1px solid white;
+    border-radius: 5px;
+    min-width: 30px;
+    text-align: center;
+  }
+
+  .approve-btn:hover, .reject-btn:hover, .remove-btn:hover {
+    opacity: 0.5;
+  }
+
+  .question-text {
+    border-bottom: 1px solid white;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
   }
 
 </style>
