Add view toggling for quiz area

--- a/views/pages/viewer.ejs
+++ b/views/pages/viewer.ejs
@@ -9,8 +9,12 @@
     overflow: hidden;
   }
 
-  #interaction {
+  #questions-area {
     background-color: #222f3e;
+  }
+
+  #quiz-area {
+    background-color: #ff9f43;
   }
 
   .display-question {
@@ -27,8 +31,15 @@
     <div id="presentation" class="col-md-9 col-xs-12">
       <canvas id="the-canvas"></canvas>
     </div>
-    <div id="interaction" class="col-md-3 col-xs-12">
+    <div id="questions-area" class="col-md-3 col-xs-12">
+      <div id="questions-content">
 
+      </div>
+    </div>
+    <div id="quiz-area" class="col-md-3 col-xs-12">
+      <div id="quiz-content">
+
+      </div>
     </div>
   </div>
   <script src="js/viewer.js"></script>
