--- a/views/pages/attendee.ejs
+++ b/views/pages/attendee.ejs
@@ -50,7 +50,12 @@
   }
 
   #question-submit {
+    padding: 10px;
+    margin: 5px;
     text-align: center;
+    border: 1px solid white;
+    border-radius: 5px;
+    cursor: pointer;
   }
 
   textarea {
