--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -112,6 +112,7 @@
         <div class="action-btn" onclick="emitPreviousPage()">Previous Page</div>
         <div class="action-btn" onclick="emitZoomIn()">Zoom In</div>
         <div class="action-btn" onclick="emitZoomOut()">Zoom Out</div>
+        <div class="action-btn" onclick="emitToggleInteraction()">Toggle View</div>
       </div>
     </div>
     <div id="section-b" class="col-md-4 col-md-offset-1 col-xs-12">
