--- a/views/pages/attendee.ejs
+++ b/views/pages/attendee.ejs
@@ -62,19 +62,25 @@
     resize: none;
   }
 
-  .section-a {
+  #section-a {
     padding: 20px;
     background-color: #5f27cd;
     border-bottom: 50px solid #341f97;
   }
 
-  .section-b {
+  #section-b {
     padding: 20px;
     background-color: #54a0ff;
     border-bottom: 50px solid #2e86de;
   }
 
-  .section-a, .section-b {
+  #section-c {
+    padding: 20px;
+    background-color: #ff6b6b;
+    border-bottom: 50px solid #ee5253;
+  }
+
+  #section-a, #section-b, #section-c {
     margin-bottom: 20px;
   }
 
@@ -95,22 +101,34 @@
 </style>
 <body>
   <div class="row">
-    <div id="attendee-submissions" class="col-md-7 col-xs-12 section-a">
-      <h4>Submit Comments and Questions</h4>
-      <div class="row">
-        <input id="name-field" placeholder="Enter your name (or leave blank to remain anonymous)"></input>
-      </div>
-      <div class="row">
-        <textarea id="question-field" rows="5" placeholder="Enter your questions"></textarea>
-      </div>
-      <div class="row">
-        <div id="question-submit" onclick="submitQuestion()">Submit</div>
+    <div id="attendee-quiz" class="col-md-3 col-xs-12">
+      <div id="section-c">
+        <h4>Send A Response</h4>
+        <div id="user-quiz">
+
+        </div>
       </div>
     </div>
-    <div id="attendee-voting" class="col-md-4 col-md-offset-1 col-xs-12 section-b">
-      <h4>Questions</h4>
-      <div id="user-voting">
+    <div id="attendee-submissions" class="col-md-5 col-xs-12">
+      <div id="section-a">
+        <h4>Submit Comments and Questions</h4>
+        <div class="row">
+          <input id="name-field" placeholder="Enter your name (or leave blank to remain anonymous)"></input>
+        </div>
+        <div class="row">
+          <textarea id="question-field" rows="5" placeholder="Enter your questions"></textarea>
+        </div>
+        <div class="row">
+          <div id="question-submit" onclick="submitQuestion()">Submit</div>
+        </div>
+      </div>
+    </div>
+    <div id="attendee-voting" class="col-md-4 col-xs-12">
+      <div id="section-b">
+        <h4>Questions</h4>
+        <div id="user-voting">
 
+        </div>
       </div>
     </div>
   </div>
