--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -105,26 +105,32 @@
 </style>
 <body>
   <div class="row">
-    <div id="section-a" class="col-md-3 col-xs-12">
-      <h4>Viewer Control</h4>
-      <div id="instructor-actions">
-        <div class="action-btn" onclick="emitNextPage()">Next Page</div>
-        <div class="action-btn" onclick="emitPreviousPage()">Previous Page</div>
-        <div class="action-btn" onclick="emitZoomIn()">Zoom In</div>
-        <div class="action-btn" onclick="emitZoomOut()">Zoom Out</div>
-        <div class="action-btn" onclick="emitToggleInteraction()">Toggle View</div>
+    <div class="col-md-3 col-xs-12">
+      <div id="section-a">
+        <h4>Viewer Control</h4>
+        <div id="instructor-actions">
+          <div class="action-btn" onclick="emitNextPage()">Next Page</div>
+          <div class="action-btn" onclick="emitPreviousPage()">Previous Page</div>
+          <div class="action-btn" onclick="emitZoomIn()">Zoom In</div>
+          <div class="action-btn" onclick="emitZoomOut()">Zoom Out</div>
+          <div class="action-btn" onclick="emitToggleInteraction()">Toggle View</div>
+        </div>
       </div>
     </div>
-    <div id="section-b" class="col-md-4 col-md-offset-1 col-xs-12">
-      <h4>Approvals</h4>
-      <div id="unapproved-questions">
+    <div class="col-md-5 col-xs-12">
+      <div id="section-b">
+        <h4>Approvals</h4>
+        <div id="unapproved-questions">
 
+        </div>
       </div>
     </div>
-    <div id="section-c" class="col-md-4 col-xs-12">
-      <h4>Live</h4>
-      <div id="approved-questions">
+    <div class="col-md-4 col-xs-12">
+      <div id="section-c">
+        <h4>Live</h4>
+        <div id="approved-questions">
 
+        </div>
       </div>
     </div>
   </div>
