Add quiz state management

--- a/views/pages/attendee.ejs
+++ b/views/pages/attendee.ejs
@@ -125,7 +125,7 @@
     </div>
     <div id="attendee-voting" class="col-md-4 col-xs-12">
       <div id="section-b">
-        <h4>Questions</h4>
+        <h4>Vote On Questions To Discuss</h4>
         <div id="user-voting">
 
         </div>
