Add basic quiz button logic

--- a/views/pages/attendee.ejs
+++ b/views/pages/attendee.ejs
@@ -98,6 +98,25 @@
     padding-right: 5px;
   }
 
+  .response-btn {
+    padding: 10px;
+    font-size: 2em;
+    margin: 10px;
+    border: 1px solid white;
+    border-radius: 5px;
+    text-align: center;
+    cursor: pointer;
+  }
+
+  .response-btn:hover {
+    opacity: 0.5;
+  }
+
+  .response-btn:active {
+    background-color: white;
+    color: #FD6C6E;
+  }
+
 </style>
 <body>
   <div class="row">
