--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -114,6 +114,8 @@
           <div class="action-btn" onclick="emitZoomIn()">Zoom In</div>
           <div class="action-btn" onclick="emitZoomOut()">Zoom Out</div>
           <div class="action-btn" onclick="emitToggleInteraction()">Toggle View</div>
+          <div class="action-btn" onclick="emitStartQuiz()">Start Quiz</div>
+          <div class="action-btn" onclick="emitEndQuiz()">End Quiz</div>
         </div>
       </div>
     </div>
