--- a/views/pages/viewer.ejs
+++ b/views/pages/viewer.ejs
@@ -17,12 +17,13 @@
     background-color: #ff9f43;
   }
 
-  .display-question {
-    padding: 10px;
-    font-size: 1.5em;
+  .question-text {
     color: white;
-    border: 1px solid white;
-    margin: 10px;
+    background-color: #58A2FC;
+    padding: 10px;
+    border-bottom: 5px solid #3488DB;
+    font-size: 1.25em;
+    width: 100%;
   }
 
 </style>
