Minor instructor layout style changes

--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -106,7 +106,7 @@
 </style>
 <body>
   <div class="row">
-    <div class="col-md-3 col-xs-12">
+    <div class="col-md-3 col-sm-4 col-xs-12">
       <div id="section-a">
         <h4>Viewer Control</h4>
         <div id="instructor-actions">
@@ -120,7 +120,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-5 col-xs-12">
+    <div class="col-md-5 col-sm-8 col-xs-12">
       <div id="section-b">
         <h4>Approvals</h4>
         <div id="unapproved-questions">
@@ -128,7 +128,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4 col-xs-12">
+    <div class="col-md-4 col-sm-12 col-xs-12">
       <div id="section-c">
         <h4>Live</h4>
         <div id="approved-questions">
