Update quiz logic to reflect persistance across views

--- a/views/pages/attendee.ejs
+++ b/views/pages/attendee.ejs
@@ -117,6 +117,16 @@
     color: #FD6C6E;
   }
 
+  .response-confirmation {
+    font-size: 1.75em;
+    text-align: center;
+    margin: 10px;
+    padding: 10px;
+    display: inline-block;
+    border-radius: 5px;
+    background-color: #EC4849;
+  }
+
 </style>
 <body>
   <div class="row">
