--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -24,7 +24,7 @@
     cursor: pointer;
   }
 
-  #section-a, #section-b, #section-c {
+  #section-a, #section-b, #section-c, #section-d {
     padding: 30px;
     margin-bottom: 20px;
   }
@@ -42,6 +42,11 @@
   #section-c {
     background-color: #1dd1a1;
     border-bottom: 50px solid #10ac84;
+  }
+
+  #section-d {
+    background-color: #ff6b6b;
+    border-bottom: 50px solid #ee5253;
   }
 
   .action-btn {
@@ -103,10 +108,16 @@
     background-color: white;
   }
 
+  .quiz-response-info {
+    font-size: 1.75em;
+    margin-bottom: 0px;
+    margin-top: 0px;
+  }
+
 </style>
 <body>
   <div class="row">
-    <div class="col-md-3 col-sm-4 col-xs-12">
+    <div class="col-md-3 col-sm-12 col-xs-12">
       <div id="section-a">
         <h4>Viewer Control</h4>
         <div id="instructor-actions">
@@ -120,7 +131,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-5 col-sm-8 col-xs-12">
+    <div class="col-md-3 col-sm-12 col-xs-12">
       <div id="section-b">
         <h4>Approvals</h4>
         <div id="unapproved-questions">
@@ -128,10 +139,18 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4 col-sm-12 col-xs-12">
+    <div class="col-md-3 col-sm-12 col-xs-12">
       <div id="section-c">
         <h4>Live</h4>
         <div id="approved-questions">
+
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3 col-sm-12 col-xs-12">
+      <div id="section-d">
+        <h4>Quiz Results</h4>
+        <div id="quiz-results">
 
         </div>
       </div>
