Put external deps into a lib folder

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,11 +3,11 @@
 <title>Interactive Presentation Demo</title>
 <meta name="description" content="Built off seed project for NodeJS, Socket.io, jQuery, Express">
 <meta name="author" content="Nafeu Nasir">
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="lib/flexboxgrid.min.css" type="text/css" >
+<link rel="stylesheet" type="text/css" href="lib/font-awesome.min.css">
 <link rel="stylesheet" href="css/styles.css">
-<link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet">
+<link href="lib/roboto-fontface.css" rel="stylesheet">
 <script src="/socket.io/socket.io.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.0.288/pdf.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="lib/pdf.min.js"></script>
+<script src="lib/jquery.min.js"></script>
 <script src="js/helpers.js"></script>
