--- a/views/pages/viewer.ejs
+++ b/views/pages/viewer.ejs
@@ -26,6 +26,10 @@
     width: 100%;
   }
 
+  #content {
+    z-index: 10;
+  }
+
 </style>
 <body>
   <div id="content" class="row">
@@ -41,6 +45,11 @@
       <div id="quiz-content">
 
       </div>
+    </div>
+  </div>
+  <div id="modal-container">
+    <div id="modal-content">
+
     </div>
   </div>
   <script src="js/viewer.js"></script>
