Implement quiz visualization

--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -156,6 +156,7 @@
       </div>
     </div>
   </div>
+  <% include ../partials/modal %>
   <script src="js/instructor.js"></script>
 </body>
 </html>
