--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,4 +10,5 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="lib/pdf.min.js"></script>
 <script src="lib/jquery.min.js"></script>
+<script src="lib/Chart.min.js"></script>
 <script src="js/helpers.js"></script>
