Add basic stats for quiz results

--- a/views/pages/viewer.ejs
+++ b/views/pages/viewer.ejs
@@ -35,6 +35,22 @@
     text-align: center;
   }
 
+  #quiz-stats {
+    padding: 20px;
+  }
+
+  #quiz-stats p {
+    color: white;
+    font-size: 2em;
+    font-weight: 100;
+    margin: 0px;
+    margin-bottom: 5px;
+  }
+
+  .bold-info {
+    font-weight: 700;
+  }
+
 </style>
 <body>
   <div id="content" class="row">
@@ -50,6 +66,9 @@
       <h3>Quiz Results</h3>
       <div id="quiz-content">
         <canvas id="quiz-results-chart" width="400" height="400"></canvas>
+        <div id="quiz-stats">
+
+        </div>
       </div>
     </div>
   </div>
