--- a/views/pages/attendee.ejs
+++ b/views/pages/attendee.ejs
@@ -129,6 +129,8 @@
 
 </style>
 <body>
+  <% include ../partials/page-header %>
+  <div class="page-info color-alt-grey"><i class="fa fa-user"></i>&nbsp;<span class="thin-info">User Participation Dashboard</span></div>
   <div class="row">
     <div id="attendee-quiz" class="col-md-3 col-xs-12">
       <div id="section-c">
@@ -162,5 +164,6 @@
     </div>
   </div>
   <script src="js/attendee.js"></script>
+  <% include ../partials/footer %>
 </body>
 </html>
