--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -116,6 +116,8 @@
 
 </style>
 <body>
+  <% include ../partials/page-header %>
+  <div class="page-info color-alt-grey"><i class="fa fa-cog"></i>&nbsp;<span class="thin-info">Instructor Control Panel</span></div>
   <div class="row">
     <div class="col-md-3 col-sm-12 col-xs-12">
       <div id="section-a">
@@ -158,5 +160,6 @@
   </div>
   <% include ../partials/modal %>
   <script src="js/instructor.js"></script>
+  <% include ../partials/footer %>
 </body>
 </html>
