--- a/views/pages/viewer.ejs
+++ b/views/pages/viewer.ejs
@@ -47,10 +47,6 @@
     margin-bottom: 5px;
   }
 
-  .bold-info {
-    font-weight: 700;
-  }
-
 </style>
 <body>
   <div id="content" class="row">
@@ -74,5 +70,6 @@
   </div>
   <% include ../partials/modal %>
   <script src="js/viewer.js"></script>
+  <% include ../partials/footer %>
 </body>
 </html>
