--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,12 +1,13 @@
 <!-- views/partials/head.ejs -->
 <meta charset="utf-8">
-<title>Interactive Presentation Demo</title>
-<meta name="description" content="Built off seed project for NodeJS, Socket.io, jQuery, Express">
+<title>CFL Interactive Learning System</title>
+<meta name="description" content="Interactive learning system for UTSC CFL">
 <meta name="author" content="Nafeu Nasir">
 <link rel="stylesheet" href="lib/flexboxgrid.min.css" type="text/css" >
 <link rel="stylesheet" type="text/css" href="lib/font-awesome.min.css">
 <link rel="stylesheet" href="css/styles.css">
 <link href="lib/roboto-fontface.css" rel="stylesheet">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
 <script src="/socket.io/socket.io.js"></script>
 <script src="lib/pdf.min.js"></script>
 <script src="lib/jquery.min.js"></script>
